@@ -3,9 +3,10 @@ package com.recipefinder.service;
 import java.io.BufferedReader;
 import java.io.File;
 import java.io.FileOutputStream;
+import java.io.IOException;
 import java.io.InputStreamReader;
-import java.util.Arrays;
 
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
@@ -13,8 +14,9 @@ import com.fasterxml.jackson.core.JsonProcessingException;
 import com.recipefinder.dao.RecipeDao;
 @Service
 public class RecipeService {
-	RecipeDao recipeDao = new RecipeDao();
-
+	@Autowired
+	RecipeDao recipeDao;
+	
 	public String getRecipe(MultipartFile multipartImage) {
 		// recieve image
 		File image = new File("./images/" + multipartImage.getOriginalFilename());
@@ -39,24 +41,30 @@ public class RecipeService {
 			return response;
 		}
 
+		
 	}
 
 	public String predictRecipe(String fileName) {
 
 		// call prediction model to get recipe name
-		Process p;
-		String result = null;
+		String result = "";		
 		try {
-			String pythonPath = "./ML/ml.py";
-			ProcessBuilder pb = new ProcessBuilder(Arrays.asList("python", pythonPath, fileName));
-			p = pb.start();
-
-			BufferedReader in = new BufferedReader(new InputStreamReader(p.getInputStream()));
-			result = in.readLine();
-			p.destroy();
+			String image = fileName;
+			String pythonPath = "ML/ml.py";			
+			
+			String[] command = new String[] {"C:\\Users\\spatel\\AppData\\Local\\Programs\\Python\\Python36\\python.exe", pythonPath, image};
+			try {
+				Process process = Runtime.getRuntime().exec(command);
+				BufferedReader stream = new BufferedReader(new InputStreamReader(process.getInputStream()));
+				result = stream.readLine();
+				System.out.println(result);
+			} catch (IOException e) {
+				// TODO Auto-generated catch block
+				e.printStackTrace();
+			}
 		} catch (Exception e) {
 			System.out.println(e);
-		}
+		} 
 		return result;
 	}
 
@@ -74,7 +82,7 @@ public class RecipeService {
 	}
 	
 	public String ServiceTest() {
-		String image = "./images/chickenb1.jpg";
+		String image = "images/chickenb1.jpg";
 		String recipeName = predictRecipe(image);
 		String response = getDBRecipe(recipeName);
 		return response;
